-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b17
-
other
Method::get_new_method() asserts that the new method cannot be null, but this method can be called on a deleted method. Such cases are handled by throwing a NoSuchMethodError instead of calling get_new_method(). This can be cleaned up to be handled in the method itself and remove the reliance on an assert.
- relates to
-
JDK-8327250 assert(!method->is_old()) failed: Should not be installing old methods
-
- Resolved
-
-
JDK-8340141 C1: rework ciMethod::equals following 8338471
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/5cffddc6
-
Review(master)
openjdk/jdk/20874
-
Review(master)
openjdk/jdk/21075