8338471: Refactor Method::get_new_method() for better NoSuchMethodError handling